# simkit.kinect

./: CMakeLists.txt  Instructions.md  README.md  build.sh  sh.desktop
include/: buttons.h  common_macros.h  mainwindow.h
src/: button_mapping.cpp  buttons.cpp  buttons.h  kinect.cpp  kinect.h  main.cpp  mainwindow.cpp  mainwindow.ui  qtex01.pro  settings.cpp  settings.h  utils.cpp  utils.h
